stateDiagram-v2
    [*] --> idle
    state planning {
        triage
        research
        discuss
        architect
        plan
        plan-review
        triage --> research : ADVANCE
        research --> discuss : ADVANCE
        research --> research : ADVANCE
        discuss --> architect : ADVANCE
        architect --> plan : ADVANCE
        plan --> plan-review : ADVANCE
        plan-review --> plan : ADVANCE
    }
    state executing {
        execute
        checks
        execute --> checks : ADVANCE
        checks --> execute : ADVANCE / incFixLoop
    }
    state reviewing {
        verify
        review
        learn
        verify --> review : ADVANCE / resetFixLoop
        review --> learn : ADVANCE / resetFixLoop
    }
    state finalizing {
        finalize
    }
    idle --> triage : ADVANCE
    plan-review --> execute : ADVANCE
    checks --> verify : ADVANCE / resetFixLoop
    verify --> checks : ADVANCE / incFixLoop
    review --> execute : ADVANCE / incFixLoop
    learn --> plan : ADVANCE
    learn --> finalize : ADVANCE
    finalize --> idle : ADVANCE
    finalize --> execute : ADVANCE
    finalize --> review : ADVANCE
